derive/tests/snapshots/foreign_keys_with_equivalent_spellings/Shipment/delete_shipments_by_destination_warehouse_id.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Try to delete all `Shipment` rows in the `shipment` table whose value matches the value from the single-column btree index on the `destination_warehouse_id` column.
    pub fn delete_shipments_by_destination_warehouse_id<'a>(
        &'a self,
        destination_warehouse_id: impl Into<other_crate::tables::WarehouseId>,
    ) -> Result<
        crate::spacetimedsl::delete::DeletionResult,
        crate::spacetimedsl::error::SpacetimeDSLError,
    > {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        use crate::spacetimedsl::itertools::Itertools;
        let destination_warehouse_id = destination_warehouse_id.into().value();
        let rows_to_delete: Vec<Shipment> = self
            .db()
            .shipment()
            .destination_warehouse_id()
            .filter(destination_warehouse_id)
            .collect();
        if rows_to_delete.is_empty() {
            return Ok(crate::spacetimedsl::delete::DeletionResult {
                table_name: "shipment".into(),
                one_or_multiple: crate::spacetimedsl::error::OneOrMultiple::Multiple,
                entries: vec![],
                error_from_hook: None,
            });
        }
        let mut deletion_result_entries = std::collections::HashMap::new();
        for row_to_delete in &rows_to_delete {
            deletion_result_entries
                .insert(
                    &row_to_delete.id,
                    crate::spacetimedsl::delete::DeletionResultEntry {
                        table_name: "shipment".into(),
                        column_name: "id".into(),
                        strategy: crate::spacetimedsl::delete::OnDeleteStrategy::Delete,
                        row_value: format!(
                            "{}", ShipmentId::new(row_to_delete.id.clone())
                        )
                            .into(),
                        child_entries: vec![],
                    },
                );
        }
        let count_of_rows_to_delete: u64 = rows_to_delete
            .len()
            .try_into()
            .unwrap_or(u64::MAX);
        let count_of_deleted_rows = self
            .db()
            .shipment()
            .destination_warehouse_id()
            .delete(destination_warehouse_id);
        if count_of_rows_to_delete.ne(&count_of_deleted_rows) {
            return Err(
                crate::spacetimedsl::error::SpacetimeDSLError::Error(
                    format!(
                        "Delete Many Error: `count_of_rows_to_delete ( {} ) != ( {} ) count_of_deleted_rows`!",
                        & count_of_rows_to_delete, & count_of_deleted_rows
                    ),
                ),
            );
        }
        return Ok(crate::spacetimedsl::delete::DeletionResult {
            table_name: "shipment".into(),
            one_or_multiple: crate::spacetimedsl::error::OneOrMultiple::Multiple,
            entries: deletion_result_entries.into_values().collect_vec(),
            error_from_hook: None,
        });
    }
}
