derive/tests/snapshots/foreign_keys_with_equivalent_spellings/Shipment/get_all_shipments.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get all rows inside the `shipment` table.
    pub fn get_all_shipments<'a>(&'a self) -> impl Iterator<Item = Shipment> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().shipment().iter()
    }
}
