derive/tests/snapshots/foreign_keys_with_equivalent_spellings/Shipment/get_shipments_by_origin_warehouse_id.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get a `Shipment` iterator that contains all rows in the `shipment` table whose value matches the value from the single-column btree index on the `origin_warehouse_id` column.
    pub fn get_shipments_by_origin_warehouse_id<'a>(
        &'a self,
        origin_warehouse_id: impl Into<::other_crate::tables::WarehouseId>,
    ) -> impl Iterator<Item = Shipment> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db()
            .shipment()
            .origin_warehouse_id()
            .filter(origin_warehouse_id.into().value())
    }
}
impl<T: crate::spacetimedsl::ReadContext> crate::spacetimedsl::ReadOnlyDSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get a `Shipment` iterator that contains all rows in the `shipment` table whose value matches the value from the single-column btree index on the `origin_warehouse_id` column.
    pub fn get_shipments_by_origin_warehouse_id<'a>(
        &'a self,
        origin_warehouse_id: impl Into<::other_crate::tables::WarehouseId>,
    ) -> impl Iterator<Item = Shipment> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db()
            .shipment()
            .origin_warehouse_id()
            .filter(origin_warehouse_id.into().value())
    }
}
