derive/tests/snapshots/foreign_keys_with_equivalent_spellings/Shipment/table.snap
---
source: derive/src/characterization_tests.rs
---
pub trait this_compilation_error_occurs_because_the_shipment_table_has_no_foreign_key_attribute_with_on_delete_defined_referencing_the_warehouse_table {}
const _: () = {
    use ::other_crate::tables::this_compilation_error_occurs_because_the_warehouse_table_is_not_deletable_or_has_no_referenced_by_attribute_referencing_the_shipment_table;
};
#[derive(
    Clone,
    Debug,
    PartialEq,
    PartialOrd,
    Eq,
    Ord,
    Hash,
    ::spacetimedb::SpacetimeType
)]
pub struct ShipmentId {
    value: u64,
}
impl Default for ShipmentId {
    fn default() -> ShipmentId {
        ShipmentId {
            value: Default::default(),
        }
    }
}
impl std::fmt::Display for ShipmentId {
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        write!(f, "{} {{ id: {:?} }}", "ShipmentId", self.value)
    }
}
impl crate::spacetimedsl::Wrapper<u64> for ShipmentId {
    fn new(value: u64) -> Self {
        Self { value }
    }
    fn value(&self) -> u64 {
        self.value.clone()
    }
}
impl From<&Shipment> for ShipmentId {
    fn from(value: &Shipment) -> Self {
        ShipmentId {
            value: value.id.clone(),
        }
    }
}
impl From<&Shipment> for Option<ShipmentId> {
    fn from(value: &Shipment) -> Option<ShipmentId> {
        Some(ShipmentId {
            value: value.id.clone(),
        })
    }
}
impl From<&ShipmentId> for Option<ShipmentId> {
    fn from(value: &ShipmentId) -> Option<ShipmentId> {
        use crate::spacetimedsl::Wrapper;
        Some(ShipmentId::new(value.value()))
    }
}
impl From<&ShipmentId> for ShipmentId {
    fn from(value: &ShipmentId) -> Self {
        use crate::spacetimedsl::Wrapper;
        ShipmentId::new(value.value())
    }
}
impl Shipment {
    ///
    pub fn get_id(&self) -> ShipmentId {
        use crate::spacetimedsl::Wrapper;
        ShipmentId::new(self.id.clone())
    }
    ///
    pub fn get_origin_warehouse_id(&self) -> ::other_crate::tables::WarehouseId {
        use crate::spacetimedsl::Wrapper;
        ::other_crate::tables::WarehouseId::new(self.origin_warehouse_id.clone())
    }
    ///
    pub fn set_origin_warehouse_id(
        &mut self,
        origin_warehouse_id: impl Into<::other_crate::tables::WarehouseId>,
    ) -> ::other_crate::tables::WarehouseId {
        use crate::spacetimedsl::Wrapper;
        let old_value = std::mem::replace(
            &mut self.origin_warehouse_id,
            origin_warehouse_id.into().value(),
        );
        ::other_crate::tables::WarehouseId::new(old_value)
    }
    ///
    pub fn get_destination_warehouse_id(&self) -> other_crate::tables::WarehouseId {
        use crate::spacetimedsl::Wrapper;
        other_crate::tables::WarehouseId::new(self.destination_warehouse_id.clone())
    }
    ///
    pub fn set_destination_warehouse_id(
        &mut self,
        destination_warehouse_id: impl Into<other_crate::tables::WarehouseId>,
    ) -> other_crate::tables::WarehouseId {
        use crate::spacetimedsl::Wrapper;
        let old_value = std::mem::replace(
            &mut self.destination_warehouse_id,
            destination_warehouse_id.into().value(),
        );
        other_crate::tables::WarehouseId::new(old_value)
    }
}
///
pub struct CreateShipment {
    pub origin_warehouse_id: ::other_crate::tables::WarehouseId,
    pub destination_warehouse_id: other_crate::tables::WarehouseId,
}

// Generated DSL methods:
// count_of_all_shipments
// create_shipment
// delete_shipment_by_id
// delete_shipments_by_destination_warehouse_id
// delete_shipments_by_origin_warehouse_id
// execute_on_delete_strategies_of_the_shipment_table_after_multiple_rows_of_the_warehouse_table_were_deleted
// execute_on_delete_strategies_of_the_shipment_table_after_one_row_of_the_warehouse_table_was_deleted
// get_all_shipments
// get_shipment_by_id
// get_shipments_by_destination_warehouse_id
// get_shipments_by_origin_warehouse_id
// update_shipment_by_id
